--- a/package.json
+++ b/package.json
@@ -2,35 +2,40 @@
   "name": "probo",
   "version": "1.0.0",
   "description": "Commercial proposal generation system based on MDX files",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir dist",
-    "start": "bun run dist/index.js",
-    "test": "bun test",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@next/mdx": "^14.0.0",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "lucide-react": "^0.294.0",
+    "recharts": "^2.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0"
+  },
+  "devDependencies": {
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.2.0"
-  },
-  "devDependencies": {
+    "typescript": "^5.2.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "eslint": "^8.51.0",
-    "prettier": "^3.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0"
+    "eslint-config-next": "^14.0.0",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "engines": {
     "bun": ">=1.0.0"
