--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mdx-js/react": "^3.0.0",
     "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.0",
-    "next-mdx-remote": "^4.4.1",
-    "next-themes": "^0.2.1",
-    "lucide-react": "^0.294.0",
-    "recharts": "^2.8.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "next": "^14.0.0",
+    "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.8.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
