--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.6",
     "lucide-react": "^0.542.0",
-    "mermaid": "^11.11.0",
+    "mermaid": "11.11.0",
     "next": "^14.0.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.4.6",
@@ -45,7 +46,6 @@
     "recharts": "2.15.4",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
-    "shiki": "^3.12.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
