--- a/package.json
+++ b/package.json
@@ -45,10 +45,17 @@
     "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "2.15.4",
     "rehype-highlight": "^7.0.2",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "shiki": "^3.12.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.5"
   },
