--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.6",
     "lucide-react": "^0.542.0",
     "mermaid": "^11.11.0",
     "next": "^14.0.0",
