--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "2.15.4",
     "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.12.2",
     "sonner": "^2.0.7",
