--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.542.0",
     "mermaid": "11.11.0",
     "next": "^14.0.0",
+    "next-intl": "^4.3.7",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
