--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "country-flag-icons": "^1.5.20",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
@@ -73,16 +74,17 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/country-flag-icons": "^1.2.2",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.2.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.0.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.0"
   },
   "engines": {
     "bun": ">=1.0.0"
