--- a/package.json
+++ b/package.json
@@ -69,12 +69,12 @@
     "shiki": "^3.12.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/cli": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/country-flag-icons": "^1.2.2",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
@@ -83,7 +83,7 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.2.0"
   },
   "engines": {
