--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -70,6 +71,7 @@
     "shiki": "^3.12.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "4.1.11",
     "vaul": "^1.1.2",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
@@ -86,7 +88,6 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0",
     "typescript": "^5.2.0"
   },
   "engines": {
